--- a/eshop.yaml
+++ b/eshop.yaml
@@ -2,7 +2,7 @@ openapi: 3.0.0
 info:
   title: eShop API
   version: 1.0.0
-  description: REST API for Lab 1 project - types, products, reviews
+  description: REST API for eShop project - types, products, reviews, auth
 
 servers:
   - url: http://localhost:3000
@@ -14,20 +14,13 @@ paths:
       summary: Get all types
       responses:
         '200':
-          description: List of all types
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    id:
-                      type: integer
-                    name:
-                      type: string
+          description: List of types
+        '500':
+          description: Internal server error
     post:
       summary: Create a new type
+      security:
+        - bearerAuth: []
       requestBody:
         required: true
         content:
@@ -39,11 +32,19 @@ paths:
               properties:
                 name:
                   type: string
+                image:
+                  type: string
       responses:
         '201':
-          description: Created type
+          description: Type created
         '400':
-          description: Invalid payload
+          description: Name required
+        '403':
+          description: Forbidden (requires admin)
+        '409':
+          description: Duplicate type name
+        '500':
+          description: Internal server error
 
   /api/types/{id}:
     get:
@@ -59,8 +60,12 @@ paths:
           description: Type object
         '404':
           description: Type not found
+        '500':
+          description: Internal server error
     put:
       summary: Update a type
+      security:
+        - bearerAuth: []
       parameters:
         - in: path
           name: id
@@ -78,15 +83,23 @@ paths:
               properties:
                 name:
                   type: string
+                image:
+                  type: string
       responses:
         '200':
           description: Type updated
         '400':
-          description: Invalid payload
+          description: Name required
+        '403':
+          description: Forbidden (requires admin)
         '404':
           description: Type not found
+        '500':
+          description: Internal server error
     delete:
       summary: Delete a type
+      security:
+        - bearerAuth: []
       parameters:
         - in: path
           name: id
@@ -96,8 +109,12 @@ paths:
       responses:
         '204':
           description: Type deleted
+        '403':
+          description: Forbidden (requires admin)
         '404':
           description: Type not found
+        '500':
+          description: Internal server error
 
   /api/types/{id}/products:
     get:
@@ -110,9 +127,33 @@ paths:
           required: true
       responses:
         '200':
-          description: List of products
+          description: Products for the type
         '404':
           description: Type not found
+        '500':
+          description: Internal server error
+
+  /api/types/{typeId}/products/{productId}/reviews:
+    get:
+      summary: Get all reviews of a product under a specific type
+      parameters:
+        - in: path
+          name: typeId
+          schema:
+            type: integer
+          required: true
+        - in: path
+          name: productId
+          schema:
+            type: integer
+          required: true
+      responses:
+        '200':
+          description: List of reviews
+        '404':
+          description: Type or product not found
+        '500':
+          description: Internal server error
 
   # ----------------- PRODUCTS -----------------
   /api/products:
@@ -121,25 +162,12 @@ paths:
       responses:
         '200':
           description: List of products
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    id:
-                      type: integer
-                    type_id:
-                      type: integer
-                    brand:
-                      type: string
-                    name:
-                      type: string
-                    price:
-                      type: number
+        '500':
+          description: Internal server error
     post:
       summary: Create a new product
+      security:
+        - bearerAuth: []
       requestBody:
         required: true
         content:
@@ -147,24 +175,34 @@ paths:
             schema:
               type: object
               required:
-                - type_id
                 - brand
                 - name
+                - type_id
                 - price
               properties:
-                type_id:
-                  type: integer
                 brand:
                   type: string
                 name:
                   type: string
+                type_id:
+                  type: integer
                 price:
                   type: number
+                description:
+                  type: string
+                image:
+                  type: string
       responses:
         '201':
           description: Product created
         '400':
           description: Invalid payload
+        '403':
+          description: Forbidden (requires admin)
+        '409':
+          description: Product already exists
+        '500':
+          description: Internal server error
 
   /api/products/{id}:
     get:
@@ -180,8 +218,12 @@ paths:
           description: Product object
         '404':
           description: Product not found
+        '500':
+          description: Internal server error
     put:
       summary: Update a product
+      security:
+        - bearerAuth: []
       parameters:
         - in: path
           name: id
@@ -195,28 +237,38 @@ paths:
             schema:
               type: object
               required:
-                - type_id
                 - brand
                 - name
+                - type_id
                 - price
               properties:
-                type_id:
-                  type: integer
                 brand:
                   type: string
                 name:
                   type: string
+                type_id:
+                  type: integer
                 price:
                   type: number
+                description:
+                  type: string
+                image:
+                  type: string
       responses:
         '200':
           description: Product updated
         '400':
-          description: Invalid payload
+          description: Invalid input data
+        '403':
+          description: Forbidden (requires admin)
         '404':
           description: Product not found
+        '500':
+          description: Internal server error
     delete:
       summary: Delete a product
+      security:
+        - bearerAuth: []
       parameters:
         - in: path
           name: id
@@ -226,23 +278,12 @@ paths:
       responses:
         '204':
           description: Product deleted
+        '403':
+          description: Forbidden (requires admin)
         '404':
           description: Product not found
-
-  /api/products/{id}/reviews:
-    get:
-      summary: Get all reviews of a specific product
-      parameters:
-        - in: path
-          name: id
-          schema:
-            type: integer
-          required: true
-      responses:
-        '200':
-          description: List of reviews
-        '404':
-          description: Product not found
+        '500':
+          description: Internal server error
 
   # ----------------- REVIEWS -----------------
   /api/reviews:
@@ -250,9 +291,13 @@ paths:
       summary: Get all reviews
       responses:
         '200':
-          description: List of all reviews
+          description: List of reviews
+        '500':
+          description: Internal server error
     post:
       summary: Create a new review
+      security:
+        - bearerAuth: []
       requestBody:
         required: true
         content:
@@ -261,13 +306,10 @@ paths:
               type: object
               required:
                 - product_id
-                - author
                 - rating
               properties:
                 product_id:
                   type: integer
-                author:
-                  type: string
                 rating:
                   type: integer
                 comment:
@@ -277,6 +319,8 @@ paths:
           description: Review created
         '400':
           description: Invalid payload
+        '500':
+          description: Internal server error
 
   /api/reviews/{id}:
     get:
@@ -292,8 +336,12 @@ paths:
           description: Review object
         '404':
           description: Review not found
+        '500':
+          description: Internal server error
     put:
       summary: Update a review
+      security:
+        - bearerAuth: []
       parameters:
         - in: path
           name: id
@@ -307,28 +355,31 @@ paths:
             schema:
               type: object
               required:
-                - product_id
-                - author
                 - rating
                 - comment
               properties:
-                product_id:
-                  type: integer
-                author:
-                  type: string
                 rating:
                   type: integer
                 comment:
                   type: string
+                user_id:
+                  type: integer
+                  description: Optional; must match existing user_id. Cannot change.
       responses:
         '200':
           description: Review updated
         '400':
-          description: Invalid payload
+          description: Invalid payload or user_id mismatch
+        '403':
+          description: Forbidden (not owner/admin)
         '404':
           description: Review not found
+        '500':
+          description: Internal server error
     delete:
       summary: Delete a review
+      security:
+        - bearerAuth: []
       parameters:
         - in: path
           name: id
@@ -338,5 +389,107 @@ paths:
       responses:
         '204':
           description: Review deleted
+        '403':
+          description: Forbidden (not owner/admin)
         '404':
           description: Review not found
+        '500':
+          description: Internal server error
+
+  # ----------------- AUTH -----------------
+  /api/auth/register:
+    post:
+      summary: Register a new user
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - email
+                - password
+                - name
+              properties:
+                email:
+                  type: string
+                password:
+                  type: string
+                name:
+                  type: string
+      responses:
+        '201':
+          description: User registered
+        '400':
+          description: Missing fields
+        '409':
+          description: Email already exists
+        '500':
+          description: Internal server error
+
+  /api/auth/login:
+    post:
+      summary: Login a user
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - email
+                - password
+              properties:
+                email:
+                  type: string
+                password:
+                  type: string
+      responses:
+        '200':
+          description: Returns access token
+        '401':
+          description: Invalid credentials
+        '500':
+          description: Internal server error
+
+  /api/auth/refresh:
+    post:
+      summary: Refresh JWT access token
+      responses:
+        '200':
+          description: New access token
+        '401':
+          description: Invalid or missing refresh token
+        '403':
+          description: Session expired or invalid
+        '500':
+          description: Internal server error
+
+  /api/auth/logout:
+    post:
+      summary: Logout user
+      responses:
+        '200':
+          description: Logged out
+        '500':
+          description: Internal server error
+
+  /api/auth/me:
+    get:
+      summary: Get current logged-in user
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: Current user info
+        '404':
+          description: User not found
+        '500':
+          description: Internal server error
+
+components:
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
